Co-authored-by: mal987 <mal987@users.noreply.github.com>

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000" />
     <meta name="description" content="Web site created using Locofy" />
-    <title>try</title>
+    <title>VOOP</title>
+    <script src=https://accounts.google.com/gsi/client async defer></script>  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
